rename to roebi-halter-in-blog

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roebi-halter-in-template-blog",
+  "name": "roebi-halter-in-blog",
   "type": "module",
   "version": "0.1.0",
   "scripts": {
