--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.4",
     "@astrojs/sitemap": "^2.0.1",
-    "astro": "^2.10.7"
+    "astro": "^2.10.7",
+    "jsonpath": "^1.1.1"
   }
 }
