--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roebi-halter-in-blog",
   "type": "module",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "scripts": {
     "astro": "astro",
     "build": "astro build",
@@ -10,6 +10,11 @@
     "docs": "astro docs",
     "help": "astro --help",
     "info": "astro info",
+    "prettier:help": "npx prettier --help",
+    "prettier:check": "npx prettier --check .",
+    "prettier:listdifferent": "npx prettier --list-different .",
+    "prettier:write": "npx prettier --write .",
+    "prepare": "husky install",
     "preview": "astro preview",
     "sync": "astro sync",
     "version": "astro --version",
