--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "astro": "^3.0.6",
     "jsonpath": "^1.1.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0"
   }
 }
