--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0"
   }
