--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -76,6 +76,9 @@ jobs:
           path: ${{ env.BUILD_PATH }}/dist
 
   deploy:
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -85,4 +88,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
